Fixed content alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,7 +50,7 @@ img {
 
 .content {
     padding-top: 20px;
-    
+    text-align:justify;
 }
 
 .content img{
